<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="loading">Loading..</string>
    <string name="isi_dulu">Isi dulu</string>
    <string name="kirim">Kirim</string>
    <string name="pengguna">Pengguna</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="gambar_login">Gambar pada halaman login</string>
    <string name="gambar_register">Gambar pada halaman register</string>
    <string name="gambar_selamat_datang">Gambar pada halaman selamat datang</string>
    <string name="gambar_detail_story">Gambar pada halaman detail story</string>
    <string name="kamera">Kamera</string>
    <string name="unggah">Unggah</string>
    <string name="galeri">Galeri</string>
    <string name="gambar_upload_story">Gambar sebagai pratinjau untuk mengirim story</string>
    <string name="tombol_ambil_gambar">Tombol untuk mengambil gambar</string>
    <string name="tombol_ganti_kamera">Tombol untuk mengganti kamera depan/belakang</string>
    <string name="masukan_berkas_gambar">Silakan masukkan berkas story terlebih dahulu</string>
    <string name="floating_action_button">Tombol untuk menuju halaman unggah story</string>
    <string name="email_tidak_valid">Email tidak valid</string>
    <string name="password_tidak_boleh_kurang_dari_8_karakter">Password tidak boleh kurang dari 8 karakter</string>
    <string name="appwidget_text">CONTOH</string>
    <string name="add_widget">Tambah widget</string>
    <string name="app_widget_description">Ini adalah deskripsi widget aplikasi</string>
    <string name="halaman_story">Halaman Story</string>
    <string name="tidak_ada_data">Tidak ada data</string>
    <string name="maps">Maps</string>
    <string name="title_activity_story_maps">StoryMapsActivity</string>
    <string name="retry">Retry</string>
    <string name="user">User</string>
    <string name="description">Description</string>
    <string name="gambar_menunjukan_tombol_lokasi">Gambar menunjukan tombol untuk mengaktifkan fitur lokasi</string>
    <string name="menunjukan_gambar_story_yang_ada_pada_maps">Menunjukan gambar story yang ada pada maps</string>
    <string name="latitude">Latitude : -</string>
    <string name="longitude">Longitude : -</string>
    <string name="latitude_value">Latitude : %1$s</string>
    <string name="longitude_value">Longitude : %1$s</string>

</resources>