<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/item_widget"
    android:background="@color/navy_primary">

        <ImageView
            android:contentDescription="@string/gambar_upload_story"
            android:id="@+id/imageView_widget"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/userTV_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/pengguna"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/descriptionTV_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:text="@string/deskripsi"
            android:textSize="18sp" />

</LinearLayout>